Refactor and add more options for redocly customization
